# circinus

./: .gitignore  .gitmodules  Cargo.toml  Justfile  LICENSE  _todo.md  circinus.code-workspace  dev.code-workspace  embed-symbol-table.py  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/: FUNDING.yml
environment/: Cargo.toml  address.rs  backtrace.rs  bootinfo.rs  global_allocator.rs  lib.rs  logger.rs  page_allocator.rs  print.rs  spinlock.rs
environment/x64/: backtrace.rs  boot.S  boot.rs  bootinfo.rs  gdt.rs  idle.rs  interrupt.rs  mod.rs  mouse.rs  paging.rs  pc8042.rs  profile.rs  syscall.rs
environment/x86_64/: boot.S  boot.rs  idle.rs  interrupt.rs  mod.rs  paging.rs  serial.rs  tss.rs  vga.rs
extensions/api/: Cargo.toml  cmdline.rs  ctypes.rs  guid.rs  kernel.rs  lib.rs  process.rs  result.rs  user_buffer.rs  uuid.rs
extensions/api/driver/: block.rs  mod.rs  net.rs  pci.rs
extensions/api/io/: mod.rs
extensions/api/posix/: mod.rs
extensions/api/schema/: mod.rs  posix.rs  unix.rs
extensions/api/schema/fs/: directory.rs  dirent.rs  file.rs  filesystem.rs  mod.rs  vfs.rs
extensions/api/vfs/: interface.rs  mod.rs  mount.rs  opened_file.rs
extensions/ext2/: Cargo.toml  dirent.rs  ext2.rs  filesystem.rs  inode.rs  lib.rs  structure.rs
extensions/tempfs/: Cargo.toml  lib.rs
extensions/virtio/: Cargo.toml  device.rs  lib.rs
extensions/virtio/transport/: mod.rs  virtio_pci.rs
extensions/virtio_blk/: Cargo.toml  lib.rs
extensions/virtio_net/: Cargo.toml  lib.rs
kernel/: Cargo.toml  deferred_job.rs  font.rs  framebuffer.rs  interrupt.rs  lang_items.rs  logger.rs  main.rs  random.rs  timer.rs
kernel/arch/: mod.rs
kernel/arch/x64/: mod.rs  process.rs  x64.json  x64.ld
kernel/arch/x86_64/: mod.rs  process.rs  x86_64.json
kernel/fs/: mod.rs
kernel/fs/devfs/: devconsole.rs  fb0.rs  font.rs  mod.rs  mouse.rs
kernel/mm/: page_fault.rs  vm.rs
kernel/process/: elf.rs  init_stack.rs  mod.rs  process.rs  process_group.rs  scheduler.rs  switch.rs  wait_queue.rs
kernel/schema/: block.rs  mod.rs
kernel/schema/system/: gpt.rs  mod.rs
kernel/schema/system/cpio/: archive.rs  mod.rs
kernel/syscall/: brk.rs  chdir.rs  clock_gettime.rs  clock_nanosleep.rs  close.rs  execve.rs  exit.rs  fcntl.rs  fork.rs  getcwd.rs  getdents64.rs  lseek.rs  mod.rs  open.rs  read.rs  stat.rs  wait4.rs  write.rs
kernel/tty/: line_reader.rs  mod.rs
log_filter/: Cargo.toml  lib.rs
root/: archive.cpio  limine.cfg  test.txt
server/starlight/: CMakeLists.txt  build.sh
server/starlight/include/: font.h  framebuffer.h
server/starlight/include/math/: rect.h
server/starlight/include/widget/: sl_element.h
server/starlight/src/: starlight.main.c
server/starlight/src/math/: rect.c
server/starlight/src/sys/: font.c  framebuffer.c
toolchain/: circinus_toolchain.cmake
userland/: Cargo.toml  Justfile  rust-toolchain.toml
userland/.cargo/: config.toml
userland/base/: Cargo.toml  ctypes.rs  lib.rs
userland/base/io/: mod.rs  read.rs  write.rs
userland/cilibc/: Makefile  build.sh  compile_flags.txt  done.md  install.sh  todo.md
userland/cilibc/include/: fcntl.h  limits.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  time.h  unistd.h
userland/cilibc/include/bits/: null.h  stddef.h  (+1 more)
userland/cilibc/src/: cilibc.c
userland/circinus/: Cargo.toml  allocator.rs  lang_items.rs  lib.rs  link-x64.ld  sys.rs  x64.json
userland/circinus/fs/: mod.rs  path.rs  stat.rs
userland/circinus/io/: mod.rs  stdin.rs  stdout.rs
userland/ciutils/: CMakeLists.txt  Makefile  build
userland/ciutils/cat/: Makefile  cat.main.c
userland/ciutils/echo/: Makefile  echo.main.c
userland/ciutils/hw/: hw.main.c
userland/ciutils/ls/: Makefile  ls.main.c
userland/csh/: Cargo.toml  main.rs  parse.rs  result.rs
userland/csh/cmdlets/: echo.rs  fb.rs  ls.rs  mod.rs
userland/cshell/: Makefile  main.c
userland/exit/: Justfile  exit  exit.asm
userland/libc/: Cargo.toml  Makefile  build.rs  renamesyms.sh
userland/libc/.cargo/: config.toml
userland/libc/include/: stddef.h
userland/libc/include/bits/: dirent.h
userland/libc/include/bits/sys/: wait.h
userland/libc/src/: allocator.rs  c_str.rs  c_vec.rs  file.rs  io.rs  lib.rs  link-x64.ld  macros.rs  start.rs  x64.json.bak
userland/libc/src/c/: stdio.c  stdlib.c  unistd.c
userland/libc/src/crt0/: Cargo.toml
userland/libc/src/crt0/src/: x86_64.S
userland/libc/src/crti/: Cargo.toml
userland/libc/src/crti/src/: x86_64.S
userland/libc/src/crtn/: Cargo.toml
userland/libc/src/crtn/src/: lib.rs  x86_64.S
userland/libc/src/header/: mod.rs
userland/libc/src/header/ctype/: cbindgen.toml  mod.rs
userland/libc/src/header/dirent/: cbindgen.toml  mod.rs
userland/libc/src/header/errno/: cbindgen.toml  mod.rs
userland/libc/src/header/fcntl/: cbindgen.toml  mod.rs
userland/libc/src/header/libgen/: cbindgen.toml  mod.rs
userland/libc/src/header/limits/: cbindgen.toml  mod.rs
userland/libc/src/header/stdio/: cbindgen.toml  default.rs  helpers.rs  mod.rs  printf.rs
userland/libc/src/header/stdlib/: cbindgen.toml  mod.rs
userland/libc/src/header/string/: cbindgen.toml  mod.rs
userland/libc/src/header/sys_types/: cbindgen.toml  mod.rs
userland/libc/src/header/sys_wait/: cbindgen.toml  mod.rs
userland/libc/src/header/unistd/: cbindgen.toml  mod.rs
userland/libc/src/platform/: mod.rs  types.rs
userland/libc/src/platform/circinus/: mod.rs
userland/libc/tests/: Makefile  hello.c
userland/stdt/: Cargo.toml
userland/stdt/src/: main.rs
userland/syscall/src/: lib.rs  syscall.rs
userland/sysroot.bak/include/: ctype.h  dirent.h  errno.h  fcntl.h  inttypes.h  libgen.h  limits.h  stddef.h  stdint.h  stdint.h.old  stdio.h  stdlib.h  string.h  time.h  unistd.h
userland/tests/: Justfile  build.sh  comp.c  exit.c  hello_world.c.old  lib.h  sys.h  test  test.c
userland/tmp/: init  test.initramfs
userland/write/: Justfile  write  write.asm
utils/: Cargo.toml  bitmap.rs  bitmap_allocator.rs  byte_size.rs  bytes_parser.rs  lazy.rs  lib.rs  once.rs  static_cell.rs  sync_ptr.rs
(+42 files in other folders)
