[workspace]
members = [
  "environment",
  "kernel",
  "utils",
  "log_filter",
  "extensions/api",
  "extensions/ext2",
  "extensions/tempfs",
  "extensions/virtio",
  "extensions/virtio_net",
  "extensions/virtio_blk",
]
exclude = ["userland", "extern/rust"]

[profile.release]
panic = "abort"
opt-level = 3
codegen-units = 1
lto = true
debug = 1
debug-assertions = false
overflow-checks = false

[profile.dev]
panic = "abort"
opt-level = 0
codegen-units = 1
lto = false
debug = 1
debug-assertions = true
overflow-checks = false
