[package]
name = "environment"
description = "A runtime environment for the kernel"
version = "0.0.1"
authors = ["chronium <chronium@users.noreply.github.com>"]
edition = "2021"

[lib]
name = "environment"
path = "lib.rs"

[dependencies]
log = "0.4.14"
x86 = "0.44.0"
vte = "0.10.1"
spin = "0.9.2"
cfg-if = "1.0.0"
bitflags = "1.3.2"
atomic_refcell = "0.1.8"

buddy_system_allocator = { version = "0.8.0", features = ["const_fn"] }
arrayvec = { version = "0.7.2", default-features = false }

utils = { path = "../utils", features = ["no_std"] }
log_filter = { path = "../log_filter" }
