[package]
name = "kernel"
version = "0.0.1"
authors = ["chronium <chronium@users.noreply.github.com>"]
edition = "2021"

[[bin]]
name = "kernel"
path = "main.rs"

[dependencies]
x86 = "0.43.0"
log = "0.4.14"
vte = "0.10.1"
spin = "0.9.2"
owo-colors = "3.1.1"
atomic_refcell = "0.1.8"

hashbrown = { version = "0.11.2", features = ["nightly"] }
crossbeam = { version = "0.8.1", default-features = false, features = [
  "alloc",
] }
itertools = { version = "0.10.3", default-features = false, features = [
  "use_alloc",
] }

api = { path = "../extensions/api" }
utils = { path = "../utils", features = ["no_std"] }
environment = { path = "../environment" }

ext2 = { path = "../extensions/ext2" }

virtio_net = { path = "../extensions/virtio_net" }
virtio_blk = { path = "../extensions/virtio_blk" }
