[package]
name = "kernel"
version = "0.0.1"
authors = ["chronium <chronium@users.noreply.github.com>"]
edition = "2021"

[[bin]]
name = "kernel"
path = "main.rs"

[dependencies]
x86 = "0.52.0"
log = "0.4.17"
vte = "0.12.0"
spin = "0.9.3"
owo-colors = "3.4.0"
atomic_refcell = "0.1.8"

goblin = { version = "0.7.1", default-features = false, features = ["elf64"] }
arrayvec = { version = "0.7.4", default-features = false }
crossbeam = { version = "0.8.1", default-features = false, features = [
  "alloc",
] }
itertools = { version = "0.11.0", default-features = false, features = [
  "use_alloc",
] }

api = { path = "../extensions/api" }
utils = { path = "../utils", features = ["no_std"] }
environment = { path = "../environment" }

ext2 = { path = "../extensions/ext2" }
tempfs = { path = "../extensions/tempfs" }

virtio_net = { path = "../extensions/virtio_net" }
virtio_blk = { path = "../extensions/virtio_blk" }
