[package]
name = "utils"
version = "0.0.1"
authors = ["chronium <chronium@users.noreply.github.com"]
edition = "2021"

[lib]
name = "utils"
path = "lib.rs"

[features]
no_std = []

[dependencies]
spin = "0.9.2"

bitvec = { version = "0.22.3", default-features = false }
crossbeam = { version = "0.8.1", default-features = false }
log = "0.4.20"
