[package]
name = "api"
version = "0.0.1"
authors = ["chronium <chronium@users.noreply.github.com"]
edition = "2021"

[lib]
name = "api"
path = "lib.rs"

[dependencies]
x86 = "0.44.0"
log = "0.4.14"
bitflags = "1.3.2"
memoffset = "0.6.5"
owo-colors = "3.2.0"
atomic_refcell = "0.1.8"

arrayvec = { version = "0.7.2", default-features = false }
hashbrown = { version = "0.11.2", features = ["nightly"] }
itertools = { version = "0.10.3", default-features = false, features = [
  "use_alloc",
] }
crossbeam = { version = "0.8.1", default-features = false, features = [
  "alloc",
] }

utils = { path = "../../utils" }
environment = { path = "../../environment" }
