[package]
name = "api"
version = "0.0.1"
authors = ["chronium <chronium@users.noreply.github.com"]
edition = "2021"

[lib]
name = "api"
path = "lib.rs"

[dependencies]
x86 = "0.49.0"
log = "0.4.17"
bitflags = "1.3.2"
memoffset = "0.6.5"
owo-colors = "3.4.0"
atomic_refcell = "0.1.8"

arrayvec = { version = "0.7.2", default-features = false }
hashbrown = { version = "0.12.1", features = ["nightly"] }
itertools = { version = "0.10.3", default-features = false, features = [
  "use_alloc",
] }
crossbeam = { version = "0.8.1", default-features = false, features = [
  "alloc",
] }

utils = { path = "../../utils" }
environment = { path = "../../environment" }
