[package]
name = "api"
version = "0.0.1"
authors = ["chronium <chronium@users.noreply.github.com"]
edition = "2021"

[lib]
name = "api"
path = "lib.rs"

[dependencies]
x86 = "0.52.0"
log = "0.4.20"
bitflags = "2.4.0"
memoffset = "0.9.0"
owo-colors = "3.5.0"
atomic_refcell = "0.1.11"

arrayvec = { version = "0.7.4", default-features = false }
hashbrown = { version = "0.14.1", features = ["nightly"] }
itertools = { version = "0.11.0", default-features = false, features = [
  "use_alloc",
] }
crossbeam = { version = "0.8.2", default-features = false, features = [
  "alloc",
] }

utils = { path = "../../utils" }
environment = { path = "../../environment" }
