[package]
name = "virtio_blk"
version = "0.0.1"
authors = ["chronium <chronium@users.noreply.github.com"]
edition = "2021"

[lib]
name = "virtio_blk"
path = "lib.rs"

[dependencies]
vcell = "0.1.3"
memoffset = "0.6.5"
owo-colors = "3.1.1"

api = { path = "../api" }
utils = { path = "../../utils" }
virtio = { path = "../virtio" }
