[package]
name = "virtio_net"
version = "0.0.1"
authors = ["chronium <chronium@users.noreply.github.com"]
edition = "2021"

[lib]
name = "virtio_net"
path = "lib.rs"

[dependencies]
bitflags = "1.3.2"
memoffset = "0.6.5"

api = { path = "../api" }
utils = { path = "../../utils" }
virtio = { path = "../virtio" }
