[package]
name = "cilibc"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["src/crt0", "src/crti", "src/crtn"]
exclude = ["core_io"]

[lib]
name = "cilibc"
crate-type = ["staticlib"]

[build-dependencies]
cbindgen = "0.26.0"
cc = "1.0.73"

[dependencies]
cbitset = "0.2.0"
core_io = { path = "core_io", features = ["collections"] }
lazy_static = { version = "1.4.0", default-features = false, features = [
    "spin_no_std",
] }
spin = { version = "0.9.4", default-features = false, features = [
    "lock_api",
    "mutex",
    "spin_mutex",
] }
memchr = { version = "2.6.3", default-features = false }

syscall = { path = "../syscall" }

[features]
default = []

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
